Improve data safety via nonNull annotations, use builder pattern consistently